--- a/hw/3/views/index.html
+++ b/hw/3/views/index.html
@@ -1,33 +1,48 @@
+<!-- This is a static file -->
+<!-- served from your routes in server.js -->
+
+<!-- You might want to try something fancier: -->
+<!-- html/nunjucks docs: http://mozilla.github.io/nunjucks/ -->
+<!-- jade: http://jade-lang.com/ -->
+<!-- haml: http://haml.info/tutorial.html -->
+<!-- hbs(handlebars): http://handlebarsjs.com/expressions.html -->
+
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Welcome to Glitch!</title>
-		<meta name="description" content="A cool thing made with Glitch">
-		<link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon">
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/public/style.css">
-	</head>
-	<body>
-		<header>
-			<h1>A Dream of the Future</h1>
-		</header>
+<head>
+	<title>Welcome to Glitch!</title>
+	<meta name="description" content="A cool thing made with Glitch">
+	<link id="favicon" rel="icon" href="https://gomix.com/favicon-app.ico" type="image/x-icon">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="/public/style.css">
+</head>
+<body>
+	<header><h1>Web service demo</h1></header>
 
-		<main>
-			<p class="bold">Oh hi,</p>
-			<p>Tell me your hopes and dreams:</p>
-			<form>
-				<input type="text" maxlength="100" placeholder="Dreams!">
-				<button type="submit">Submit</button>
-			</form>
-			<section class="dreams">
-				<ul id="dreams"></ul>
-			</section>
-		</main>
+	<main>
+		<p class="bold">hay gurl,</p>
+		<p>Tell me your name n stuff:</p>
+		<form>
+			<input type="text" name="fname" maxlength="100" placeholder="First Name!">
+			<input type="text" name="lname" maxlength="100" placeholder="Last Name!">
+			<input type="text" name="age" maxlength="100" placeholder="Age!">
+			<input type="text" name="gender" maxlength="100" placeholder="Gender!">
+			
+			<button type="submit">Submit</button>
+		</form>
+		<section class="dreams">
+			<ul id="dreams">
+			</ul>
+		</section>
+	</main>
 
-		<!-- Your web-app is https, so your scripts need to be too -->
-		<script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script>
-		<script src="/public/client.js"></script>
-	</body>
+	<!-- Your web-app is https, so your scripts need to be too -->
+	<script src="https://code.jquery.com/jquery-2.2.1.min.js"
+			integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00="
+			crossorigin="anonymous"></script>
+	<script src="/public/client.js"></script>
+
+</body>
 </html>
